--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "adapt-iframe",
     "repository": "git://github.com/cgkineo/adapt-iframe",
-    "framework": "^2.0.0",
+    "framework": ">2.0.0",
     "version": "2.0.0",
     "homepage": "https://github.com/cgkineo/adapt-iframe",
     "issues": "https://github.com/cgkineo/adapt-iframe/issues/",
